chore: fix color visibility for shoot

--- a/src/styles/game/cell.scss
+++ b/src/styles/game/cell.scss
@@ -46,8 +46,8 @@
 	background-color: $hue;
 }
 .type1024 {
-	background-color: $sblackf;
+	background-color: $sblackc;
 }
 .type2048 {
-	background-color: $sblackg;
+	background-color: $sblackd;
 }
